--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1 style="color:blue;">Welcome to my website</h1>
     <h2>hello</h2>
     Hello World!!
     
